setup app for heroku

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
 <body>
 	<div class="main-content">
 		{{>header}}
+		<p>This website was created by Kenny Pham. It uses data from mapbox.com and weatherstack.com.</p>
 		<img class="profile-picture" src="./img/robot.png" alt="" />
 	</div>
 	{{>footer}}
